assets/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: openshift-monitoring
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: grafana
