assets/grafana/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
  name: grafana
  namespace: openshift-monitoring
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: grafana
